--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -18,7 +18,7 @@
             breaklinks,
             pdftitle={Chapel Language Specification},
             pdfauthor={Cray Inc, 411 First Ave S Suite 600, Seattle, WA 98104},
-            pdfsubject={Cray High Productivity Language}
+            pdfsubject={Chapel High Productivity Language}
            ]{hyperref}
 \else
 \usepackage[ps2pdf]{hyperref}
