Spell-checked and fixed the spec.  The major misspellings were integeral and muldimensional.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10778 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Conversions.tex
+++ b/spec/Conversions.tex
@@ -24,7 +24,7 @@ conversions are allowed from compile-time constants of type \chpl{int}
 and \chpl{int(64)} to other smaller numeric types if the value is in
 the range of the smaller numeric
 type~(\rsec{Implicit_Compile_Time_Constant_Conversions}).  Lastly,
-implicit conversions are supported from integeral and class types to
+implicit conversions are supported from integral and class types to
 bool in the context of a
 statement~(\rsec{Implicit_Statement_Bool_Conversions}).
 
