--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -164,7 +164,7 @@ symbol \chpl{type} is equivalent to \chpl{s.itemType}.
 \index{numeric@\chpl{numeric}}
 The generic types \chpl{integral} and \chpl{numeric} are generic types
 that can only be instantiated with, respectively, the signed and
-unsigned integeral types and all of the numeric types.
+unsigned integral types and all of the numeric types.
 
 \subsubsection{Formal Arguments of Generic Array Types}
 \label{Formal_Arguments_of_Generic_Array_Types}
