--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -256,7 +256,7 @@ To set \chpl{n} at runtime, the following command is used.
 > ./a.out --n=1000
 \end{commandline}
 
-To set \chpl{debug} at compile time, the following compile commmand
+To set \chpl{debug} at compile time, the following compile command
 and flag is used.
 \begin{commandline}
 > chpl testprogram.chpl -s debug=true
@@ -391,7 +391,7 @@ The code below gives simple examples of how domains and arrays are declared
 and used.
 The variable \chpl{D2} is declared to have type \chpl{domain(2)}
 indicating that it is a two-dimensional domain.  The domain declaration
-also includes an intialization for the domain using the range literal
+also includes an initialization for the domain using the range literal
 expression \chpl{1..n},
 indicating that \chpl{D2} is an arithmetic domain.  The arrays declared
 with \chpl{D2}, \chpl{A}, \chpl{B}, \chpl{C} are two-dimensional
@@ -484,7 +484,7 @@ var x: 3*int;
 \end{example}
 
 A tuple expression is a comma-separated list of expressions that
-is enclosed in parantheses.  Tuples can be declared and assigned to with
+is enclosed in parentheses.  Tuples can be declared and assigned to with
 tuple expressions.  When a tuple expression appears on the
 left-hand side of an assignment statement, the expression on the right-hand
 side is a \emph{destructured} tuple expression.  
@@ -896,7 +896,7 @@ x = let t1 = sqrt(b*b - 4.0*a*c), t2 = 2.0*a
 \paragraph{Conditional Expression} 
 \index{conditional expressions}
 Chapel provides a conditional expression that can be evaluated
-at the expresion level.  For more information about conditional
+at the expression level.  For more information about conditional
 expressions see~\rsec{Conditional_Expressions}.
 
 \begin{example}
