--- a/spec/Locality_and_Distribution.tex
+++ b/spec/Locality_and_Distribution.tex
@@ -165,7 +165,7 @@ on the locale where the corresponding object \chpl{t} is located.
 This is specified in the \chpl{nodes} iterator where the \chpl{on}
 keyword is used.  In the case of zipper or tensor product iteration,
 the location of execution is taken from the first iterator.  This can
-be overridden by explictly using \chpl{on} in the body of the loop or
+be overridden by explicitly using \chpl{on} in the body of the loop or
 by reordering the product of iteration.
 \end{example}
 
