--- a/spec/Modules.tex
+++ b/spec/Modules.tex
@@ -143,7 +143,7 @@ explicitly use a nested module to have access to its symbols.
 
 \begin{example}
 A nested module can be used without using the outer module by
-explictly naming the module in the use statement.  The code
+explicitly naming the module in the use statement.  The code
 \begin{chapel}
 use libmsl.blas;
 \end{chapel}
