--- a/spec/Notation.tex
+++ b/spec/Notation.tex
@@ -5,7 +5,7 @@ Special notations are used in this specification to denote Chapel code
 and to denote Chapel syntax.
 
 Chapel code is represented with a fixed-width font where keywords are
-bold and comments are italicised.
+bold and comments are italicized.
 \begin{example}
 \begin{chapel}
 for i in D do   // iterate over domain D
