--- a/spec/Organization.tex
+++ b/spec/Organization.tex
@@ -24,7 +24,7 @@ Section~\ref{Language_Overview}, Language Overview, describes Chapel
 at a high level.
 
 \item
-Section~\ref{Lexical_Structure}, Lexical Strucutre, describes the
+Section~\ref{Lexical_Structure}, Lexical Structure, describes the
 lexical components of Chapel.
 
 \item
@@ -37,7 +37,7 @@ in Chapel.
 
 \item
 Section~\ref{Conversions}, Conversions, describes the legal implicit
-and explict conversions allowed between values of different types.
+and explicit conversions allowed between values of different types.
 Chapel does not allow for user-defined conversions.
 
 \item
