--- a/spec/Standard_Modules.tex
+++ b/spec/Standard_Modules.tex
@@ -63,7 +63,7 @@ bits to the right \chpl{shift} number of times.
 \label{Math}
 
 The module \chpl{Math} defines routines for mathematical computations.
-This module is used by default; there is no need to explictly used
+This module is used by default; there is no need to explicitly used
 this module.  The Math module defines routines that are derived from
 and implemented via the standard C routines defined in \chpl{math.h}.
 
@@ -260,7 +260,7 @@ def nearbyint(x: real): real
 \end{protohead}
 \begin{protobody}
 Returns the rounded integral value of the argument determined by the
-current rouding direction.
+current rounding direction.
 \end{protobody}
 
 \begin{protohead}
@@ -268,7 +268,7 @@ def rint(x: real): real
 \end{protohead}
 \begin{protobody}
 Returns the rounded integral value of the argument determined by the
-current rouding direction.
+current rounding direction.
 \end{protobody}
 
 \begin{protohead}
