--- a/spec/Tuples.tex
+++ b/spec/Tuples.tex
@@ -103,7 +103,7 @@ The tuples must match each other in shape.
 \subsubsection{Tuple Relational Operators}
 \label{Tuple_Relational_Operators}
 \index{tuples!relational}
-Relational operators over tuples apply in an "alphebetical" manner.  Each
+Relational operators over tuples apply in an "alphabetical" manner.  Each
 component is compared to the corresponding component or to the scalar
 value until the relation is found to be true or false.
 \begin{example}
@@ -236,7 +236,7 @@ Conversions are not applied to the components.
 \label{Formal_Argument_Declarations_in_a_Tuple}
 \index{formal arguments!tuples}
 
-Formal argument declarations can be grouped into a tuple similarily to
+Formal argument declarations can be grouped into a tuple similarly to
 variable declarations to facilitate passing the result of a function that
 returns a tuple directly to another function.
 
