--- a/spec/Locality_and_Distribution.tex
+++ b/spec/Locality_and_Distribution.tex
@@ -40,6 +40,29 @@ locale as described above.  Both data and computations can be
 associated with a value of locale type. The only operators defined
 over locales are the equality and inequality comparison operators.
 
+\subsubsection{Locale Methods}
+\label{Locale_Methods}
+\index{Locales!methods}
+
+The locale type supports the following methods:
+
+\begin{protohead}
+def locale.numCores: int;
+\end{protohead}
+\begin{protobody}
+Returns the number of processor cores available on a given locale.
+\end{protobody}
+
+\begin{protohead}
+use Memory;
+def locale.physicalMemory(unit: MemUnits=Bytes, type retType=int(64)): retType;
+\end{protohead}
+\begin{protobody}
+Returns the amount of physical memory available on a given locale in
+terms of the specified memory units (Bytes, KB, MB, or GB) using a
+value of the specified return type.
+\end{protobody}
+
 \subsubsection{Predefined Locales Array}
 \label{Predefined_Locales_Array}
 \index{Global@\chpl{Global}}
