--- a/spec/Standard_Modules.tex
+++ b/spec/Standard_Modules.tex
@@ -1,5 +1,6 @@
 \sekshun{Standard Modules}
 \label{Standard_Modules}
+\index{standard modules}
 
 This section describes predefined functions that are available to any
 Chapel program as well as a set of standard modules that, when used,
@@ -20,6 +21,7 @@ and that more standard modules will be defined.
 
 \subsection{BitOps}
 \label{BitOps}
+\index{standard modules!BitOps}
 
 The module \chpl{BitOps} defines routines that manipulate the bits of
 values of integral types.
@@ -61,6 +63,7 @@ bits to the right \chpl{shift} number of times.
 
 \subsection{Math}
 \label{Math}
+\index{standard modules!Math}
 
 The module \chpl{Math} defines routines for mathematical computations.
 This module is used by default; there is no need to explicitly used
@@ -334,6 +337,7 @@ than the argument in absolute value.
 
 \subsection{Random}
 \label{Random}
+\index{standard modules!Random}
 
 The module \chpl{Random} supports the generation of pseudo-random
 values and streams of values.  The current interface is minimal and
@@ -415,8 +419,68 @@ array or multiple arrays which require no coherence between them.  The
 of the current time if no seed value is provided.
 \end{protobody}
 
+
+\subsection{Search}
+\label{Search}
+\index{standard modules!Search}
+
+The \chpl{Search} module is designed to support standard search
+routines.  The current interface is minimal and should be expected to
+grow and evolve over time.
+
+\begin{protohead}
+def LinearSearch(Data: [?Dom], val): (bool, index(Dom))
+\end{protohead}
+\begin{protobody}
+Searches through the pre-sorted array \chpl{Data} looking for the
+value \chpl{val} using a sequential linear search.  Returns a tuple
+indicating (1) whether or not the value was found and (2) the location
+of the value if it was found, or the location where the value should
+have been if it was not found.
+\end{protobody}
+
+
+\begin{protohead}
+def BinarySearch(Data: [?Dom], val, in lo = Dom.low, in hi = Dom.high);
+\end{protohead}
+\begin{protobody}
+Searches through the pre-sorted array \chpl{Data} looking for the
+value \chpl{val} using a sequential binary search.  If provided, only
+the indices \chpl{lo} through \chpl{hi} will be considered, otherwise
+the whole array will be searched.  Returns a tuple indicating (1)
+whether or not the value was found and (2) the location of the value
+if it was found, or the location where the value should have been if
+it was not found.
+\end{protobody}
+
+
+\subsection{Sort}
+\label{Sort}
+\index{standard modules!Sort}
+
+The \chpl{Sort} module is designed to support standard sorting
+routines.  The current interface is minimal and should be expected to
+grow and evolve over time.
+
+\begin{protohead}
+def InsertionSort(Data: [?Dom]) where Dom.rank == 1;
+\end{protohead}
+\begin{protobody}
+Sorts the 1D array \chpl{Data} in-place using a sequential insertion
+sort algorithm.
+\end{protobody}
+
+\begin{protohead}
+def QuickSort(Data: [?Dom]) where Dom.rank == 1;
+\end{protohead}
+\begin{protobody}
+Sorts the 1D array \chpl{Data} in-place using a sequential
+implementation of the QuickSort algorithm.
+\end{protobody}
+
 \subsection{Standard}
 \label{Standard}
+\index{standard modules!Standard}
 
 \begin{protohead}
 def ascii(s: string): int
@@ -536,6 +600,7 @@ values in the range.
 
 \subsection{Time}
 \label{Time}
+\index{standard modules!Time}
 
 The module \chpl{Time} defines routines that query the system time and
 a record \chpl{Timer} that is useful for timing portions of code.
@@ -616,10 +681,19 @@ Delays the computation for \chpl{t} seconds.
 \subsection{Types}
 
 \begin{protohead}
-def numBits(type t): int
+def numBits(type t) param : int
 \end{protohead}
 \begin{protobody}
 Returns the number of bits used to store the values of type \chpl{t}.
+This is implemented for all numeric types and \chpl{bool}.
+\end{protobody}
+
+
+\begin{protohead}
+def numBytes(type t) param : int
+\end{protohead}
+\begin{protobody}
+Returns the number of bytes used to store the values of type \chpl{t}.
 This is implemented for all numeric types and \chpl{bool}.
 \end{protobody}
 
