Replaced old HPCC tutorial with two papers: an overview (update of our CUG paper) and a tutorial walkthrough (taking the stuff that went into the CUG paper out).
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10786 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/README
+++ b/README
@@ -72,6 +72,6 @@ For more detailed information about...      refer to...
   ...example Chapel programs                  ...examples/README
   ...an overview of the Chapel language       ...doc/chapelLanguageSpec.pdf, Ch5
   ...a quick reference for Chapel syntax      ...doc/quickReference.pdf
-  ...a tutorial using three HPCC benchmarks   ...doc/hpcc06.pdf
+  ...a tutorial using three HPCC benchmarks   ...doc/hpccTutorial.pdf
   ...the Chapel language specification        ...doc/chapelLanguageSpec.pdf
   ...notes for Cygwin users                   ...doc/README.cygwin
