Added error checking on compound assignment to ensure that the rhs can be assigned to the lhs for operators other than shifts.  Used a BLOCK_TYPE (code that is resolved but removed from the AST shortly after) to do this.
The statement

  a op= b;

is now translated to

  move(ltmp, &a)
  move(rtmp, b)
  if _isPrimitiveType(*ltmp) then
    BLOCK_TYPE: ltmp = rtmp
    ltmp = _cast(ltmp, *ltmp op rtmp)
  else
    ltmp = *ltmp op rtmp

Removed a .future that checks this error.

Unified code a little.

Updated the spec to this change, removing a status note and mentioning
the shift semantics.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10807 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Statements.tex
+++ b/spec/Statements.tex
@@ -154,20 +154,16 @@ example, \chpl{x += y} is equivalent to \chpl{x = x + y} where the
 expression \chpl{x} is evaluated once.
 
 In a compound assignment, a cast to the type on the left-hand side is
-inserted before the simple assignment if the right-hand side
-expression can be assigned to the left-hand side expression and the
-type of the left-hand side is a primitive type.
+inserted before the simple assignment if the operator is a shift or
+both the right-hand side expression can be assigned to the left-hand
+side expression and the type of the left-hand side is a primitive
+type.
 
 \begin{rationale}
 This cast is necessary to handle \chpl{+=} where the type of the
 left-hand side is, for example, \chpl{int(8)} because the \chpl{+}
 operator is defined on \chpl{int(32)}, not \chpl{int(8)}.
 \end{rationale}
-
-\begin{status}
-Currently, there is no verification that the right-hand side
-expression can be assigned to the left-hand side expression.
-\end{status}
 
 Values of one primitive or enumerated type can be assigned to another
 primitive or enumerated type if an implicit coercion exists between
