Fix example in the spec that used a conditional expression as an lvalue.  Fix the test of that example.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10838 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Functions.tex
+++ b/spec/Functions.tex
@@ -276,7 +276,10 @@ var x, y = 0;
 def A(i: int) var {
   if i < 0 || i > 1 then
     halt("array access out of bounds");
-  return if i == 0 then x else y;
+  if i == 0 then
+    return x;
+  else
+    return y;
 }
 \end{chapel}
 This function can be assigned to in order to write to the ``elements''
