Fixed error where \chpl was used instead of \rsec when referencing the query expression section of the spec from the Language Overview.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10944 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -643,7 +643,7 @@ operators for either see~\rsec{Reductions_and_Scans}.
 \index{query expression}
 The query expression is used to query the type of a generic function argument
 and assign that type to a variable.  For more information about
-query expressions and generic functions see~\chpl{The_Query_Expression} 
+query expressions and generic functions see~\rsec{The_Query_Expression} 
 and~\rsec{Generic_Functions}.
 
 \begin{example}
