Fixed regressions in David's config param flag tests thanks to some incredibly helpful debugging from David (it would've taken me forever to find this).
Because Immediate() supports char* and bool constructors,
and because we were passing a const char* in, C++ decides
the better match is the bool constructor.  Oog.  Fixed
this by making the Immediate constructor that takes a
char* take a const char* and propagating the const-ness
to related variables, methods, and functions similar to
what the bulk of my check-in yesterday did.

Thanks David!


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11048 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Ranges.tex
+++ b/spec/Ranges.tex
@@ -251,8 +251,8 @@ slice-expr:
 Where the first expression is the range being sliced and the second
 expression is the range expressing the slice.  The resulting range
 represents the intersection between the two ranges.  If the slicing
-range is unbounded in one or both dimensions, it inherits its upper
-and lower bounds from the range being sliced.
+range is unbounded in one or both directions, it inherits its missing
+bounds from the range being sliced.
 
 \begin{example}
 In the following example, \chpl{r} represents the integers from 1 to
