Enabled the ability to write a real literal without the fractional part if an exponent is specified, e.g., 1e4.  Removed a .future.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11289 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Types.tex
+++ b/spec/Types.tex
@@ -201,6 +201,7 @@ Real literals are designated by the following syntax:
 \begin{syntax}
 real-literal:
   digits[OPT] . digits exponent-part[OPT]
+  digits exponent-part
 
 exponent-part:
   `e' sign[OPT] digits
