Modified the conditions used to infer the return type of a function with multiple return statements so that instead of only looking at coercions, it also looks at the class hierarchy.
Given classes

  class C {}
  class D1: C {}
  class D2: C {}

this change infers a return type of C if a function returns a C on one
path but a D1 on another.  Removed a future.

On the other hand, if a function returns a D1 on one path and a D2 on
another, the result is an error: the compiler cannot infer the return
type.  Changed a good and removed a future.

For this other hand, our plan to return the most immediate base class
failed since we are not a single-inheritance language.

Updated the spec to discuss return types; previously it did not.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11514 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Functions.tex
+++ b/spec/Functions.tex
@@ -75,6 +75,8 @@ Default values are discussed in~\rsec{Default_Values}.
 Functions do not require parentheses if they have no arguments.  Such
 functions are described in~\rsec{Functions_without_Parentheses}.
 
+Return types are optional and are discussed in~\rsec{Return_Types}.
+
 Functions can take a variable number of arguments.  Such functions are
 discussed in~\rsec{Variable_Length_Argument_Lists}.
 
@@ -243,6 +245,35 @@ argument can be generic and takes its type from the actual argument.
 Domains cannot be passed to a function via the \chpl{inout} intent.
 The formal argument can be assigned to and read from within the
 function.
+
+\subsection{Return Types}
+\label{Return_Types}
+\index{return@\chpl{return}!types}
+
+A function can optionally return a value.  If the function does not
+return a value, then no return type can be specified.  If the function
+does return a value, the return type is optional.
+
+\subsubsection{Explicit Return Types}
+\label{Explicit_Return_Types}
+
+If a return type is specified, the values that the function returns
+via return statements must be assignable to a value of the return
+type.  For variable functions~(\rsec{Variable_Functions}), the return
+type must match the type returned in all of the return statements
+exactly.
+
+\subsubsection{Implicit Return Types}
+\label{Implicit_Return_Types}
+\index{type inference!of return types}
+
+If a return type is not specified, it will be inferred from the return
+statements.  Given the types that are returned by the different
+statements, if exactly one of those types can be a target, via
+implicit conversions, of every other type, then that is the inferred
+return type.  Otherwise, it is an error.  For variable
+functions~(\rsec{Variable_Functions}), every return statement must
+return the same exact type and it becomes the inferred type.
 
 \subsection{Variable Functions}
 \label{Variable_Functions}
